--- a/portfolio-react/src/project.json
+++ b/portfolio-react/src/project.json
@@ -1,8 +1,8 @@
 [
     {
         "id": "1",
-        "name": "",
-        "image": "",
+        "name": "Project One",
+        "image": "Project:one.png?raw=true",
         "project": "",
         "Deployment": ""
     },
