fixed the code on json

--- a/portfolio-react/src/assets/project.json
+++ b/portfolio-react/src/assets/project.json
@@ -1,7 +1,7 @@
 [
     {
         "id": "1",
-        "name": "covid-19 Tracke",
+        "name": "covid-19 Tracker",
         "image": "https://www.theborneopost.com/newsimages/2020/05/logo-covid-19-1.gif",
         "project": "Project One",
         "location": "https://abuyem1.github.io/COVID-19-Tracker/"
