--- a/portfolio-react/package.json
+++ b/portfolio-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-react",
+  "name": "abouyeportfolio",
   "homepage": "https://abuyem1.github.io/Portfolio-React/",
   "version": "0.1.0",
   "private": true,
